--- a/speedo.htm
+++ b/speedo.htm
@@ -2,12 +2,12 @@
 layout: default
 permalink: /speedo/
 ---
-<h1 id="readme">Speedometer README</h1>
-{% include_relative Speedometer_readme.md %}
+<p><h1 id="readme">Speedometer README</h1>
+{% include_relative Speedometer_readme.html %}</p>
 <hr>
-<h2 id="changelog">Speedometer Changelog </h2>
-{% include_relative Speedometer_changelog.md %}
-<hr>
+<p><h2 id="changelog">Speedometer Changelog </h2>
+{% include_relative Speedometer_changelog.html %}</p>
+
 <!--div class="home">
 
   <h1 class="page-heading">Posts</h1>
